css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Open Sans", sans-serif;
}

.btn:hover {
    outline-offset: 2px;
}

.btn_red:hover {
    outline: 2px solid #cd3d0f;
}

.btn_blue:hover {
    outline: 2px solid #2d64e6;
}

.btn_black:hover {
    outline: 2px solid #5c636a;
}

.btn_gray:hover {
    outline: 2px solid #5c636a;
    background-color: #5c636a;
    color: white;
}

/* header */
header {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
    box-shadow: 1px 1px 4px grey;
}

.header-top {
    display: flex;
    justify-content: end;
    background-color: black;
    height: 28px;
}

header .navbar {
    background-color: white;
    height: 72px;
}

.navbar-collapse {
    background-color: rgba(255, 255, 255, 0.384);
}

.header_logo-sony svg {
    height: 14px;
    margin: 0 12px;
    justify-self: end;
}

.navbar-toggler {
    border: 1px solid lightgrey;
    height: 38px;
}

.navbar-toggler:hover {
    box-shadow: 1px 1px 4px black;
}

.nav-link {
    font-size: 16px;
    font-weight: 600;
    color: black;
    margin-left: 4px;
}

.dropdown .fa-chevron-down {
    height: 12px;
    fill: #999999;
}

.dropdown .nav-link:hover svg {
    fill: #0070d1;
}

.header_right button {
    background-color: #363636;
    border-radius: 24px;
    padding: 6px 16px;
    margin: 0 8px;
}

.header_right svg {
    height: 28px;
}

.header_right svg:hover {
    transform: scale(110%);
}

/* /header */

/* main */
main {
    padding-top: 100px;
}

.hero {
    height: 670px;
    background-position-x: center;
    background-size: cover;
}

.hero .container {
    height: 100%;
}

.hero1_bg {
    background-image: url(../img/jumbo-bg.png);
}

.hero_title, .hero_description {
    color: white;
}

.hero_card {
    height: 100%;
}

.hero_card-logo {
    height: 38px;
}

.hero_title {
    font-size: 36px;
    font-weight: 600;
    width: 100%;
}

.hero_description {
    font-size: 18px;
    width: 100%;
}

.hero .btn {
    background-color: #cd3d0f;
    color: white;
    margin: 16px 0 50px;
    border-radius: 30px;
}

.sub-row-card button {
    background-color: transparent;
    border-radius: 0;
    border: none;
}

.sub-row-card img {
    width: 100%;
    border-radius: 18px;
    cursor: pointer;
}

.sub-row-card img:hover {
    transform: translateY(-10px);
}

.ps5-show-box_title {
    margin-top: 64px;
}

.ps5-show-box_main {
    margin-top: 64px;
}

.show-box h4 {
    font-size: 16px;
    color: #0070d1;
    font-weight: 700;
    margin-bottom: 2px;
}

.show-box h1 {
    font-weight: 700;
    font-size: 48px;
}

.show-box button {
    background-color: #2d64e6;
    color: white;
    padding: 8px 16px;
    border-radius: 18px;
    font-weight: 600;
}

.show-box p {
    color: grey;
    font-size: 24px;
    font-weight: 600;
    margin-top: 20px;
}

.show-box h2 {
    font-weight: 600;
    font-size: 42px;  
}

.show-box img {
    width: 100%;
}

.ps5-show-box_icon-row {
    margin-top: 48px;
    margin-bottom: 40px;
}

.ps5-show-box_icon-row_card {
    position: relative;
    opacity: 70%;
}

.ps5-show-box_icon-row_card p {
    color: black;
    font-size: 18px;
}

.ps5-show-box_icon-row img {
    padding: 0 10%;
}

.marker {
    position: absolute;
    left: 0;
    bottom: 0;
    height: 3px;
    width: 100%;
    background-color: #0070d1;
    opacity: 0;
}

.ps5-show-box_icon-row .active, .active .marker, .ps5-show-box_icon-row_card:hover {
    opacity: 1;
    cursor: pointer;
}

.ps5-show-box_icon-row_card:hover .marker {
    opacity: 1;
}

.hero2_bg {
    background-image: url(/img/it-takes-two-hero-banner-desktop.jpg);
}

.hero2_logo {
    height: 140px;
}

.nuove-uscite {
    background-color: #1f1f1f;
    color: white;
}

.nuove-uscite h3 {
    font-size: 32px;
}

.nuove-uscite p {
    font-size: 20px;
    font-weight: 500;
}

.nuove-uscite_card img {
    width: 100%;
    border-radius: 16px;
    cursor: pointer;
}

.nuove-uscite_card img:hover {
    transform: scale(105%);
}

.nuove-uscite_card p {
    font-size: 16px;
}

.esplora .row h3 {
    font-size: 30px;
    font-weight: 600;
}

.esplora .row p {
    font-size: 18px;
    font-weight: 600;
    margin-top: 12px;
    flex-grow: 1;
}

.esplora .row button {
    width: 140px;
}

.ps-service_hero {
    height: 400px;
    overflow-x: hidden;
}

.ps-plus {
    background-color: #bebcbb;
}

.ps-service_logo-box img {
    width: 70%;
}

.ps-service_hero p {
    font-weight: 600;
    font-size: 18px;
}

.ps-service_hero button {
    background-color: #d9dadc;
    border: none;
    padding: 8px 16px;
    border-radius: 18px;
    color: #0070d1;
    font-size: 16px;
    font-weight: 700;
}

.sconti button {
    background-color: transparent;
    padding: 0;
    border-radius: 0;
    border: none;
}

.sconti button:hover img {
    transition: 0.3s;
    border-radius: 20%;
}

.ps-now {
    background-color: #161c3b;
    color: white;
}

.ps-now button {
    color: black;
}

.social-media {
    margin-top: 70px;
    margin-bottom: 70px;
}

.social-media h3 {
    font-size: 38px;
    font-weight: 600;
}

.social-media a:hover img {
    transition: 0.3s;
    border-radius: 50%;
}
/* /main */

/* footer */
footer {
    background-color: #00439c;
    color: white;
}

footer .container {
    padding-top: 100px;
    padding-bottom: 100px;
}

.footer_logo-ps img {
    height: 90px;
}

.footer_logo-ps p {
    font-size: 20px;
    margin: 36px 0;
}

.footer_logo-ps i {
    font-size: 26px;
    margin-right: 14px;
}

.footer-link-box li {
    list-style-type: none;
    margin: 12px 0;
}

.footer-link-box nav a {
    font-size: 18px;
    text-decoration: none;
    color: white;
}

.footer-link-box nav a:hover {
    color: orange;
    text-decoration: underline;
}

.footer_logo-sie img {
    height: 70px;
    margin-bottom: 18px;
}

.footer_logo-sie p a {
    color: white;
}

/* /footer */

